--- a/src/views/consulta.html
+++ b/src/views/consulta.html
@@ -91,7 +91,11 @@
 
             <section class="informacion__diversos">
               <section class="informacion__diversos--ubicacion">
-                <img src="../../public/images/location_black.svg" alt="" srcset="" />
+                <img
+                  src="../../public/images/location_black.svg"
+                  alt=""
+                  srcset=""
+                />
                 <a
                   href=""
                   class="informacion__diversos--vaciado"
@@ -113,7 +117,11 @@
               </section> -->
               <section class="informacion__diversos--tipoCargador">
                 <section class="tipoCargador__titulo">
-                  <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
+                  <img
+                    src="../../public/images/bolt_black.svg"
+                    alt=""
+                    srcset=""
+                  />
                   <p>Tipos de Cargador:</p>
                 </section>
                 <section class="tipoCargador__informacion">
@@ -124,18 +132,42 @@
                   </section>
                   <section class="tipoCargador__informacion--nombres">
                     <div>
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
                       <p>Nivel 1 - CA (120-127V)</p>
                     </div>
                     <div>
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
                       <p>Nivel 2 - CA (220-240V)</p>
                     </div>
                     <div>
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
-                      <img src="../../public/images/bolt_black.svg" alt="" srcset="" />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
+                      <img
+                        src="../../public/images/bolt_black.svg"
+                        alt=""
+                        srcset=""
+                      />
                       <p>Carga Rápida - CC</p>
                     </div>
                   </section>
@@ -143,7 +175,11 @@
               </section>
               <section class="informacion__diversos--conectores">
                 <section class="conectores__titulo">
-                  <img src="../../public/images/cable_black.svg" alt="" srcset="" />
+                  <img
+                    src="../../public/images/cable_black.svg"
+                    alt=""
+                    srcset=""
+                  />
                   <p>Conectores</p>
                 </section>
 
